--- a/public/index.html
+++ b/public/index.html
@@ -110,7 +110,7 @@
                     <div class="form-row">
                         <div class="input-group">
                             <label class="input-label">DSV Account Number</label>
-                            <input type="text" name="dsvAccount" class="input-field" placeholder="6400000000">
+                            <input type="text" name="dsvAccount" class="input-field" value="8004990000">
                         </div>
                         <div class="input-group">
                             <label class="input-label">Service Code</label>
@@ -122,30 +122,57 @@
                         </div>
                     </div>
 
-                    <h3>Pickup Information</h3>
+                    <div class="form-row">
+                        <div class="input-group">
+                            <label class="input-label">Origin Country (ISO)</label>
+                            <input type="text" name="origin_country" class="input-field" value="CH"
+                                placeholder="e.g. CH">
+                        </div>
+                        <div class="input-group">
+                            <label class="input-label">Commodity</label>
+                            <input type="text" name="commodity" class="input-field" value="Industrial Parts"
+                                placeholder="e.g. Industrial Parts">
+                        </div>
+                    </div>
+
+                    <h3>Receiver Information</h3>
                     <div class="form-row">
                         <div class="input-group">
                             <label class="input-label">Company Name</label>
-                            <input type="text" name="pickup_company" class="input-field" required>
+                            <input type="text" name="dest_company" class="input-field" placeholder="Test Receiver GmbH"
+                                required>
                         </div>
                         <div class="input-group">
-                            <label class="input-label">Contact Name</label>
-                            <input type="text" name="pickup_contact" class="input-field" required>
+                            <label class="input-label">Address</label>
+                            <input type="text" name="dest_address" class="input-field" placeholder="Main Street 1"
+                                required>
                         </div>
                     </div>
 
                     <div class="form-row">
                         <div class="input-group">
-                            <label class="input-label">Email</label>
-                            <input type="email" name="pickup_email" class="input-field">
+                            <label class="input-label">City</label>
+                            <input type="text" name="dest_city" class="input-field" placeholder="Krefeld" required>
                         </div>
                         <div class="input-group">
-                            <label class="input-label">Phone</label>
-                            <input type="text" name="pickup_phone" class="input-field">
+                            <label class="input-label">Zip Code</label>
+                            <input type="text" name="dest_zip" class="input-field" placeholder="47807" required>
                         </div>
                     </div>
 
-                    <button type="submit" class="btn-primary">Generate Shipment Draft</button>
+                    <div class="form-row">
+                        <div class="input-group">
+                            <label class="input-label">Country (ISO)</label>
+                            <input type="text" name="dest_country" class="input-field" value="DE" placeholder="e.g. DE"
+                                required>
+                        </div>
+                        <div class="input-group">
+                            <label class="input-label">Weight (KG)</label>
+                            <input type="number" step="0.1" name="weight" class="input-field" value="2.5" required>
+                        </div>
+                    </div>
+
+                    <button type="submit" class="btn-primary">Create Real Booking</button>
                 </form>
             </div>
         </section>
@@ -164,6 +191,20 @@
                     <div class="timeline" id="tracking-timeline">
                         <!-- Dynamic content -->
                     </div>
+                </div>
+            </div>
+        </section>
+
+        <!-- DOCUMENTS VIEW -->
+        <section id="view-documents" class="view-section">
+            <div class="stat-card">
+                <h2>Document Repository</h2>
+                <div
+                    style="margin: 2rem 0; padding: 3rem; border: 2px dashed #e2e8f0; border-radius: 16px; text-align: center; color: var(--text-muted);">
+                    <i class="fas fa-cloud-upload-alt"
+                        style="font-size: 3rem; margin-bottom: 1rem; display: block;"></i>
+                    <p>Drag and drop customs documents here to attach them to your drafts.</p>
+                    <button class="btn-primary" style="margin-top: 1.5rem;">Browse Files</button>
                 </div>
             </div>
         </section>
