fixed booking form

--- a/public/index.html
+++ b/public/index.html
@@ -152,11 +152,13 @@
                     <div class="form-row">
                         <div class="input-group">
                             <label class="input-label">City</label>
-                            <input type="text" name="dest_city" class="input-field" placeholder="Krefeld" required>
+                            <input type="text" name="dest_city" class="input-field" value="Krefeld"
+                                placeholder="e.g. Krefeld" required>
                         </div>
                         <div class="input-group">
-                            <label class="input-label">Zip Code</label>
-                            <input type="text" name="dest_zip" class="input-field" placeholder="47807" required>
+                            <label class="input-label">Zip Code (5 digits for DE)</label>
+                            <input type="text" name="dest_zip" class="input-field" value="47807"
+                                placeholder="e.g. 47807" required>
                         </div>
                     </div>
 
